[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.11.0",
    "flask>=3.1.1",
    "googlesearch-python>=1.3.0",
    "instructorembedding>=1.0.1",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-groq>=0.3.2",
    "pypdf>=5.5.0",
    "requests>=2.32.3",
    "sentence-transformers>=4.1.0",
    "tiktoken>=0.9.0",
    "twilio>=9.6.1",
]
